--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,43 @@ body {
     text-wrap: balance;
   }
 }
+
+/* Estilizando a barra de rolagem para navegadores que suportam */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* Fundo transparente */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #64748b; /* Cor da barra: slate-500 */
+  border-radius: 10px; /* Pontas arredondadas */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #4b5563; /* Cor mais escura ao passar o mouse */
+}
+
+/* Remover as setas da barra de rolagem */
+::-webkit-scrollbar-button {
+  display: none; /* Remove as setas */
+}
+
+/* Para navegadores Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #64748b transparent;
+}
+
+/* Arredondando as pontas no Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #64748b transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+}
